--- a/style.css
+++ b/style.css
@@ -78,13 +78,13 @@ html {
   height: 3.3rem;
   width: 9.5vw;
   border: 1px solid;
-  border-bottom-left-radius: 9px;
-  border-top-right-radius: 12px;
-  border-bottom-right-radius: 12px;
+  border-bottom-left-radius: 0.9rem;
+  border-top-right-radius: 0.9rem;
+  border-bottom-right-radius: 0.9rem;
 }
 
 .cta img {
-  width: 0.8rem;
+  width: 0.8vw;
   height: auto;
 }
 .satyam {
@@ -143,9 +143,9 @@ html {
   height: 4rem;
   width: 12.5vw;
   border: 1px solid;
-  border-bottom-left-radius: 9px;
-  border-top-right-radius: 12px;
-  border-bottom-right-radius: 12px;
+  border-bottom-left-radius: 0.9rem;
+  border-top-right-radius: 0.9rem;
+  border-bottom-right-radius: 0.9rem;
 }
 
 a {
@@ -398,9 +398,11 @@ a {
 }
 .testmonialsHeader {
   text-align: center;
+  margin: 0 auto;
   font-size: 3rem;
   color: #25224a;
-  font-size: 800;
+  /* font-size: 700; */
+  max-width: 50vw;
   font-family: "Poppins", sans-serif;
 }
 .founderDetails {
@@ -503,10 +505,10 @@ a {
 }
 .yellowCont h2 {
   font-family: "IBM Plex Sans Hebrew", sans-serif;
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 600;
   line-height: 1.2;
-  max-width: 80rem;
+  max-width: 40rem;
   text-align: center;
   color: #25224a;
 }
@@ -610,4 +612,222 @@ a {
 .footer-link:hover,
 .footer-link:active {
   color: #555;
+}
+#hhhh {
+  display: none;
+}
+
+@media (max-width: 1025px) {
+  .headerContainer {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+  }
+  .listItem {
+    font-size: 1.5rem;
+  }
+  /* .containerFix {
+    width: 100vw;
+    margin: 0 auto;
+  } */
+
+  /* .cta img {
+    width: 50vw;
+  } */
+  .logo {
+    width: 8rem;
+  }
+  .cta {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+    font-size: 1.5rem;
+    height: 5rem;
+    width: 15vw;
+    border: 1px solid;
+    border-bottom-left-radius: 0.9rem;
+    border-top-right-radius: 0.9rem;
+    border-bottom-right-radius: 0.9rem;
+  }
+  .subheading {
+    font-size: 2rem;
+    font-weight: 600;
+    color: #464154;
+    font-family: "Poppins", sans-serif;
+    line-height: 2;
+  }
+  .Primary-heading {
+    font-size: 3rem;
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    color: #25224a;
+    padding: 0 0 1rem 0;
+    max-width: 45vw;
+  }
+  .hero-desc {
+    font-size: 1.8rem;
+    line-height: 1.5;
+    color: #25224a;
+    padding: 0 0 4rem 0;
+  }
+  .leftBtn {
+    font-size: 1.8rem;
+  }
+
+  .ctaPer {
+    font-size: 2rem;
+    height: 6.5rem;
+    width: 20vw;
+    font-weight: 500;
+  }
+  .heroImgBox img {
+    width: 30vw;
+    margin-right: 6rem;
+  }
+  .discoverCont {
+    display: flex;
+    flex-direction: column-reverse;
+    font-size: 2rem;
+  }
+  .discoverCont2 {
+    display: flex;
+    flex-direction: column;
+  }
+  .discover-desc p {
+    font-size: 2.5rem;
+    line-height: 2;
+    font-weight: 600;
+  }
+  .Discover-desc {
+    font-size: 1.8rem;
+    max-width: 100vw;
+  }
+  .discoverHeader {
+    font-size: 3.4rem;
+  }
+  .d-img {
+    height: 87rem;
+    width: 84rem;
+    /* order: 1; */
+  }
+  .testmonialsHeader {
+    text-align: center;
+    margin: 0 auto;
+    font-size: 3.5rem;
+    max-width: 60vw;
+  }
+  .d-none {
+    display: none;
+  }
+}
+
+@media (max-width: 480px) {
+  .d2-none {
+    display: none;
+  }
+  .heroSectionitem {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  .logo {
+    width: 28rem;
+    padding: 3rem 0 0 0;
+    /* height: 10vh; */
+  }
+  .headerContainer {
+    height: 15rem;
+    margin: 0 auto;
+  }
+  .subheading {
+    font-size: 4.5rem;
+  }
+  .Primary-heading {
+    font-size: 6.5rem;
+    max-width: 73vw;
+    padding: 0;
+  }
+  .hero-desc {
+    font-size: 4rem;
+  }
+  .heroImgBox {
+    width: 100%;
+  }
+  .heroImgBox img {
+    width: 100%;
+    margin-right: 0;
+  }
+  .btn {
+    display: flex;
+    flex-direction: column;
+    gap: 5rem;
+  }
+  .ctaPer {
+    font-size: 5rem;
+    height: 8vh;
+    width: 100%;
+    border-radius: 0 3rem 3rem 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10rem;
+  }
+  .ctaPer img {
+    width: 5vw;
+  }
+
+  .yContBtn {
+    padding: 8rem;
+  }
+  .yellowCont h2 {
+    font-family: "IBM Plex Sans Hebrew", sans-serif;
+    font-size: 6rem;
+    font-weight: 600;
+    line-height: 1.2;
+    max-width: 60rem;
+    text-align: center;
+    color: #25224a;
+  }
+  .discoverHeader {
+    font-size: 8rem;
+  }
+  .Discover-desc {
+    font-size: 4rem;
+    max-width: 100vw;
+  }
+  .discover-desc p {
+    font-size: 4rem;
+    /* line-height: ; */
+    font-weight: 600;
+    /* padding: 5rem 0; */
+  }
+  .dotted-icon {
+    width: 3rem;
+  }
+
+  .grid--footer {
+    grid-template-columns: 1fr;
+  }
+  .copyright {
+    font-size: 5rem;
+    line-height: 1.6;
+    color: #767676;
+    /* margin-top: auto; */
+  }
+  .social-icon {
+    height: 5rem;
+    width: 5rem;
+  }
+  .footer-heading {
+    font-size: 4rem;
+    color: #25224a;
+    font-weight: 600;
+    margin-bottom: 2rem;
+  }
+  .footer-link:link,
+  .footer-link:visited {
+    text-decoration: none;
+    font-size: 3.5rem;
+    color: #767676;
+    transition: all 0.3s;
+  }
 }
